[package]
name = "zeen_filter"
version = "0.1.0"
authors = ["nzengi <zenginureddin1@gmailcom"]
description = "A fast and optimized Bloom Filter implementation in Rust."
homepage = "https://github.com/nzengi"
repository = "https://github.com/nzengi/zeen_filter"
keywords = ["rust", "performance"]
edition = "2021"
license = "MIT"


[dependencies]
rand = "0.8"
rayon = "1.5"           # For parallel processing
log = "0.4"             # For logging operations
murmur3 = "0.5"         # Murmur3 hash function for optimized hashing
siphasher = "0.3"       # Additional hash function for cryptographic safety
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
mur3 = "0.1.0"

[dev-dependencies]
criterion = "0.3"       # Benchmarking library