[package]
name = "zeen_filter"
version = "0.1.0"
authors = ["nzengi <zenginureddin1@gmail.com>"]
edition = "2021"
description = "A fast and optimized Bloom Filter implementation in Rust."
documentation = "https://docs.rs/zeen_filter"  # Documentation link
repository = "https://github.com/nzengi/zeen_filter"
homepage = "https://github.com/nzengi"
license = "MIT"
keywords = ["bloom-filter", "rust", "performance"]

[dependencies]
rand = "0.8"
rayon = "1.5"           # For parallel processing
log = "0.4"             # For logging operations
murmur3 = "0.5"         # Murmur3 hash function for optimized hashing
siphasher = "0.3"       # Additional hash function for cryptographic safety
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
mur3 = "0.1.0"

[dev-dependencies]
criterion = "0.3"       # Benchmarking library
